--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ before_install:
 script:
   - export OOC_LIBS=$PWD
   - cd samples
-  - rock -v -r builder-sample.ooc
+  - mkdir -p bin
+  - rock -v -r builder-sample.ooc -o=bin/sample
